avoid embedded table overlapping toc
By turning the macro into a block, it is moved to the next line after the toc. This prevents the loading-indicator with its position: relative to overlap the toc.

--- a/frontend/src/global_styles/content/user-content/_macros.sass
+++ b/frontend/src/global_styles/content/user-content/_macros.sass
@@ -1,3 +1,4 @@
-.op-uc-embedded-table 
+.op-uc-embedded-table
   clear: both
+  display: block
 
